# CPU-Usage-Tracker

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/: logger.h  printer.h  termination_handler.h  watchdog.h
include/core/: analyzer.h  reader.h  ring_buffer.h  types.h
src/: logger.c  main.c  printer.c  termination_handler.c  watchdog.c
src/core/: analyzer.c  reader.c  ring_buffer.c  types.c
tests/: CMakeLists.txt  run.sh
tests/core/: analyzer.c  reader.c  ring_buffer.c  types.c
